--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 NODE_ENV=development
+REACT_APP_AUTH0_DOMAIN=tsaihuangsd.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=c19CGCvWHM7MCtO2zXdWj51d9LpF9vOB
+REACT_APP_AUTH0_AUDIENCE=https://myshare.api/
+REACT_APP_AUTH0_ISSUER=https://tsaihuangsd.auth0.com/
 REACT_APP_FRONTEND_URL=http://localhost:3000
+REACT_APP_REDIRECT_URI=http://localhost:3000/callback
+REACT_APP_BACKEND_URL=http://localhost:9000
